# c_kieli

./: .gitignore  CMakeLists.txt
c/teht1/: main.exe.stackdump  userInput.c
c/teht2/: main.c
c/teht3/: main.exe.stackdump
c/teht4/: main.c
cpp/teht10(1)/: FixedSizeQueue.h  Stamper.cpp  TravelCard.cpp  TravelCard.h  main.cpp
cpp/teht3(1)/: CMakeLists.txt  FixedSizeQueue.cpp  FixedSizeQueue.h  Stamp.cpp  Stamp.h  Stamper.cpp  Stamper.h  TravelCard.cpp  TravelCard.h  main.cpp  main.h  main.vcxproj  main.vcxproj.filters
cpp/teht3(1)/x64/Debug/: main.ilk  vc143.idb
cpp/teht6/: TravelCard.cpp  TravelCard.h  main.cpp
